--- a/app/src/main/res/layout-v26/activity_login.xml
+++ b/app/src/main/res/layout-v26/activity_login.xml
@@ -50,29 +50,29 @@
         android:visibility="gone">
 
         <TextView
-            android:id="@+id/header1TextView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/sdss"
-            android:textColor="@color/colorBackground"
-            android:textSize="25sp"
-            android:textStyle="bold" />
+                android:id="@+id/header1TextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/sdss"
+                android:textColor="@color/colorBackground"
+                android:textSize="25sp"
+                android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/header2TextView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/header1TextView"
-            android:layout_marginTop="10dp"
-            android:text="@string/sds"
-            android:textColor="@color/colorAccent"
-            android:textSize="15sp" />
+                android:id="@+id/header2TextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/header1TextView"
+                android:layout_marginTop="10dp"
+                android:text="@string/sds"
+                android:textColor="@color/colorAccent"
+                android:textSize="15sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_above="@+id/loginButton"
-            android:layout_below="@+id/header1TextView"
+            android:layout_below="@+id/header2TextView"
             android:gravity="center"
             android:orientation="vertical">
 
@@ -93,7 +93,7 @@
                     android:hint="@string/userName"
                     android:textColor="@color/colorTextView"
                     android:textColorHint="@color/colorAccent"
-                    android:textSize="15sp" android:inputType="text" android:autofillHints=""/>
+                    android:textSize="15sp" android:inputType="" android:autofillHints=""/>
 
             <EditText
                     android:id="@+id/passwordEditText"
@@ -135,6 +135,9 @@
             android:text="@string/skip"
             android:textColor="@color/colorTextView"
             android:textSize="15sp" />
+
+
     </RelativeLayout>
+
 </RelativeLayout>
 
