--- a/app/src/main/res/layout/activity_loading.xml
+++ b/app/src/main/res/layout/activity_loading.xml
@@ -5,14 +5,18 @@
                                                    android:layout_width="match_parent"
                                                    android:layout_height="match_parent" android:id="@+id/linearLayout3">
 
-    <ProgressBar
-            style="?android:attr/progressBarStyle"
+
+    <Button
+            android:text="@string/next"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/progressBar" tools:layout_conversion_absoluteHeight="48dp"
-            tools:layout_conversion_absoluteWidth="411dp" android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            android:layout_height="wrap_content"
+            tools:layout_editor_absoluteX="16dp" android:id="@+id/next_question_button"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
+    <FrameLayout
+            android:id="@+id/frame_question"
+            android:layout_width="match_parent"
+            android:layout_height="680dp" tools:layout_editor_absoluteX="86dp"
+            app:layout_constraintBottom_toTopOf="@+id/next_question_button" tools:ignore="ExtraText">
+
+    </FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
