--- a/app/src/main/res/layout/fragment_radio_answer.xml
+++ b/app/src/main/res/layout/fragment_radio_answer.xml
@@ -4,8 +4,7 @@
                                                    xmlns:tools="http://schemas.android.com/tools"
                                                    android:layout_width="match_parent"
                                                    android:layout_height="match_parent"
-                                                   android:background="@android:color/holo_blue_light"
-                                                   tools:context=".view.quiz.QuizActivity"
+                                                   tools:context=".view.quiz."
                                                    android:id="@+id/constraintLayout">
 
     <TextView
