--- a/app/src/main/res/layout/activity_loading.xml
+++ b/app/src/main/res/layout/activity_loading.xml
@@ -8,15 +8,24 @@
 
     <Button
             android:text="@string/next"
-            android:layout_width="match_parent"
+            android:layout_width="199dp"
             android:layout_height="wrap_content"
-            tools:layout_editor_absoluteX="16dp" android:id="@+id/next_question_button"
-            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
+            android:id="@+id/next_question_button"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
+    <Button
+            android:text="@string/prev_question_button"
+            android:layout_width="199dp"
+            android:layout_height="wrap_content" android:id="@+id/prev_question_button" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/next_question_button" android:layout_marginEnd="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+            app:layout_constraintHorizontal_bias="0.0"/>
     <FrameLayout
             android:id="@+id/frame_question"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" tools:layout_editor_absoluteX="86dp"
-            >
+            android:layout_height="match_parent" tools:layout_editor_absoluteX="-115dp"
+            tools:layout_editor_absoluteY="0dp">
 
     </FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
