Quiz is almost done. Next step Volley to get API request

--- a/app/src/main/res/layout/activity_loading.xml
+++ b/app/src/main/res/layout/activity_loading.xml
@@ -7,6 +7,13 @@
 
 
     <Button
+            android:text="@string/submit"
+            android:layout_width="199dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/submit_quiz_button"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>>
+    <Button
             android:text="@string/next"
             android:layout_width="199dp"
             android:layout_height="wrap_content"
