--- a/app/src/main/res/layout/activity_loading.xml
+++ b/app/src/main/res/layout/activity_loading.xml
@@ -34,5 +34,10 @@
             android:layout_height="match_parent" tools:layout_editor_absoluteX="-115dp"
             tools:layout_editor_absoluteY="0dp">
 
+        <ProgressBar
+                style="?android:attr/progressBarStyle"
+                android:layout_width="match_parent"
+                android:layout_height="645dp"
+                android:id="@+id/progressBar"/>
     </FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
