--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -6,20 +6,56 @@
                                                    android:layout_height="match_parent" android:id="@+id/linearLayout2">
 
     <ImageView
+            android:id="@+id/sdsImageView"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_centerInParent="true"
+            android:contentDescription="@null"
+            android:src="@drawable/sds" android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="parent"/>
+
+    <TextView
+            android:id="@+id/header1TextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/sdss"
+            android:textColor="@color/colorBackground"
+            android:textSize="25sp"
+            android:textStyle="bold" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/sdsImageView" android:layout_marginStart="8dp"
+            app:layout_constraintHorizontal_bias="0.021" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="parent"/>
+
+    <TextView
+            android:id="@+id/header2TextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/header1TextView"
+            android:text="@string/sds"
+            android:textColor="@color/colorAccent"
+            android:textSize="15sp"
+            android:layout_marginTop="48dp" app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/sdsImageView" android:layout_marginStart="8dp"
+            app:layout_constraintHorizontal_bias="0.037"/>
+
+    <ImageView
             android:layout_width="152dp"
             android:layout_height="179dp" app:srcCompat="@drawable/profile"
             android:id="@+id/profileImageView" app:layout_constraintEnd_toEndOf="parent"
             android:clickable="true"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="60dp"
-            app:layout_constraintHorizontal_bias="0.091" android:contentDescription="@string/imgProfile"/>
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="104dp"
+            app:layout_constraintHorizontal_bias="0.031" android:contentDescription="@string/imgProfile"/>
     <ImageView
             android:layout_width="154dp"
             android:layout_height="181dp" app:srcCompat="@drawable/checkup" android:id="@+id/checkupImageView"
             android:clickable="true"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
-            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.095"
+            android:layout_marginTop="104dp"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toEndOf="@+id/profileImageView" android:layout_marginStart="8dp"
-            app:layout_constraintHorizontal_bias="1.0"/>
+            app:layout_constraintHorizontal_bias="1.0" android:contentDescription="TODO"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
