--- a/app/src/main/res/layout/fragment_seek_ans.xml
+++ b/app/src/main/res/layout/fragment_seek_ans.xml
@@ -7,6 +7,43 @@
                                                    tools:context=".view.quiz.fragments.SeekAnsFragment"
                                                    android:id="@+id/frameLayout">
 
+    <ImageView
+            android:id="@+id/sdsImageView"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_centerInParent="true"
+            android:contentDescription="@null"
+            android:src="@drawable/sds" android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="parent"/>
+
+    <TextView
+            android:id="@+id/header1TextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/sdss"
+            android:textColor="@color/colorBackground"
+            android:textSize="25sp"
+            android:textStyle="bold" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/sdsImageView" android:layout_marginStart="8dp"
+            app:layout_constraintHorizontal_bias="0.021" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="parent"/>
+
+    <TextView
+            android:id="@+id/header2TextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/header1TextView"
+            android:text="@string/sds"
+            android:textColor="@color/colorAccent"
+            android:textSize="15sp"
+            android:layout_marginTop="48dp" app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/sdsImageView" android:layout_marginStart="8dp"
+            app:layout_constraintHorizontal_bias="0.037"/>
+
+
     <TextView
             android:id="@+id/question"
             android:layout_width="match_parent"
@@ -16,11 +53,13 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Display1"
             android:textColor="@android:color/black"
             android:textStyle="bold"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintVertical_bias="0.0"/>
+            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/header2TextView" app:layout_constraintVertical_bias="0.069"/>
+
+
     <SeekBar
             style="@style/Widget.AppCompat.SeekBar.Discrete"
             android:layout_width="match_parent"
