--- a/app/src/main/res/layout/fragment_seek_ans.xml
+++ b/app/src/main/res/layout/fragment_seek_ans.xml
@@ -70,5 +70,13 @@
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/question"
             android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
+    <TextView
+            android:text="0"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/progress_textView" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+            android:layout_marginTop="28dp" app:layout_constraintTop_toBottomOf="@+id/seekBar_widget"
+            app:layout_constraintHorizontal_bias="0.488"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
