--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,7 +9,7 @@
     </style>
 
     <style name="ProgressBarStyles">
-        <item name="colorAccent">@color/colorProgressBar</item>
+        <item name="colorAccent">@color/light_color</item>
     </style>
 
 </resources>
