--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,80 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/rootView"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/colorBackground"
+                xmlns:tools="http://schemas.android.com/tools"
+                android:id="@+id/login"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/black"
                 tools:context=".view.login.LoginActivity"
-    >
+>
 
     <ImageView
-        android:id="@+id/sdsImageView"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_centerInParent="true"
-        android:contentDescription="@null"
-        android:src="@drawable/sds" />
+            android:id="@+id/login-sds-mini-logo"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_centerInParent="true"
+            android:contentDescription="@null"
+            android:src="@drawable/sds"/>
 
     <TextView
-        android:id="@+id/sdsTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/sdsImageView"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="5dp"
-        android:text="@string/sds"
-        android:textColor="@color/colorSplashText"
-        android:textSize="16sp" />
+            android:id="@+id/login-title-desc"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/login-sds-mini-logo"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="5dp"
+            android:text="@string/sds_title_long_caps"
+            android:textColor="@color/light_color"
+            android:textSize="16sp" android:textStyle="bold" android:textAlignment="center"/>
 
     <ProgressBar
-        android:id="@+id/loadingProgressBar"
-        style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="match_parent"
-        android:layout_height="12dp"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="-4dp"
-        android:foregroundGravity="bottom"
-        android:indeterminate="true"
-        android:padding="0dp"
-        android:theme="@style/ProgressBarStyles" />
+            android:id="@+id/loading_progress_bar"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="match_parent"
+            android:layout_height="12dp"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="-4dp"
+            android:foregroundGravity="bottom"
+            android:indeterminate="true"
+            android:padding="0dp"
+            android:theme="@style/ProgressBarStyles"/>
 
     <RelativeLayout
-        android:id="@+id/afterAnimationView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginEnd="20dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="130dp"
-        android:orientation="vertical"
-        android:visibility="gone">
-
-        <TextView
-            android:id="@+id/header1TextView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/sdss"
-            android:textColor="@color/colorBackground"
-            android:textSize="25sp"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/header2TextView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/header1TextView"
-            android:layout_marginTop="10dp"
-            android:text="@string/sds"
-            android:textColor="@color/colorAccent"
-            android:textSize="15sp" />
-
-        <LinearLayout
+            android:id="@+id/after_animation_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_above="@+id/loginButton"
-            android:layout_below="@+id/header1TextView"
-            android:gravity="center"
-            android:orientation="vertical">
+            android:layout_marginEnd="20dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="130dp"
+            android:orientation="vertical"
+            android:visibility="gone">
+
+        <TextView
+                android:id="@+id/menu-title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/sds_title_long"
+                android:textColor="@color/colorBackground"
+                android:textSize="25sp"
+                android:textStyle="bold"/>
+
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/menu-title"
+                android:layout_marginTop="10dp"
+                android:text="@string/sds_title_long"
+                android:textColor="@color/colorAccent"
+                android:textSize="15sp"/>
+
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_above="@+id/loginButton"
+                android:layout_below="@+id/menu-title"
+                android:gravity="center"
+                android:orientation="vertical">
 
             <EditText
                     android:id="@+id/userIDEditText"
@@ -106,35 +105,34 @@
                     android:textSize="15sp" android:inputType="textPassword" android:autofillHints=""/>
 
 
-
         </LinearLayout>
 
         <Button
-            android:id="@+id/loginButton"
-            android:layout_width="match_parent"
-            android:layout_height="55dp"
-            android:layout_above="@+id/skipTextView"
-            android:layout_marginBottom="5dp"
-            android:background="@drawable/button_drawable"
-            android:text="@string/login"
-            android:textAllCaps="false"
-            android:textColor="@color/colorAccent"
-            android:textSize="16sp" />
+                android:id="@+id/loginButton"
+                android:layout_width="match_parent"
+                android:layout_height="55dp"
+                android:layout_above="@+id/skipTextView"
+                android:layout_marginBottom="5dp"
+                android:background="@drawable/button_drawable"
+                android:text="@string/login"
+                android:textAllCaps="false"
+                android:textColor="@color/colorAccent"
+                android:textSize="16sp"/>
 
         <TextView
-            android:id="@+id/skipTextView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_marginBottom="10dp"
-            android:background="?android:attr/selectableItemBackground"
-            android:clickable="true"
-            android:focusable="true"
-            android:gravity="center"
-            android:padding="12dp"
-            android:text="@string/skip"
-            android:textColor="@color/colorTextView"
-            android:textSize="15sp" />
+                android:id="@+id/skipTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_marginBottom="10dp"
+                android:background="?android:attr/selectableItemBackground"
+                android:clickable="true"
+                android:focusable="true"
+                android:gravity="center"
+                android:padding="12dp"
+                android:text="@string/skip"
+                android:textColor="@color/colorTextView"
+                android:textSize="15sp"/>
     </RelativeLayout>
 </RelativeLayout>
 
