--- a/app/src/main/res/layout/activity_notification_schedule.xml
+++ b/app/src/main/res/layout/activity_notification_schedule.xml
@@ -1,61 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                    xmlns:app="http://schemas.android.com/apk/res-auto"
-                                                   xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
                                                    android:layout_width="match_parent"
                                                    android:layout_height="match_parent" android:id="@+id/linearLayout">
 
-    <ImageView
-            android:id="@+id/sdsImageView"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_centerInParent="true"
-            android:contentDescription="@null"
-            android:src="@drawable/sds" android:layout_marginStart="8dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent"/>
+	<ImageView
+			android:id="@+id/alert-sds-mini-logo"
+			android:layout_width="60dp"
+			android:layout_height="60dp"
+			android:layout_centerInParent="true"
+			android:contentDescription="@null"
+			android:src="@drawable/sds"
+			app:layout_constraintTop_toTopOf="parent"
+			android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="parent"
+			android:layout_marginStart="8dp"/>
+
+	<TextView
+			android:id="@+id/alert-title"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:text="@string/sds_title_short"
+			android:textColor="@color/dark_color"
+			android:textSize="25sp"
+			android:textStyle="bold"
+			app:layout_constraintTop_toTopOf="@+id/alert-sds-mini-logo"
+			app:layout_constraintStart_toEndOf="@+id/alert-sds-mini-logo"
+			android:layout_marginStart="8dp"/>
+
+	<TextView
+			android:id="@+id/alert-title-desc"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_below="@+id/alert-title"
+			android:text="@string/sds_title_long"
+			android:textColor="@color/dark_color"
+			android:textSize="15sp"
+			app:layout_constraintTop_toBottomOf="@+id/alert-title"
+			app:layout_constraintBottom_toBottomOf="@+id/alert-sds-mini-logo"
+			app:layout_constraintStart_toEndOf="@+id/alert-sds-mini-logo" android:layout_marginStart="8dp"
+	/>
+
 
     <TextView
-            android:id="@+id/header1TextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/sdss"
-            android:textColor="@color/colorBackground"
-            android:textSize="25sp"
-            android:textStyle="bold" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/sdsImageView" android:layout_marginStart="8dp"
-            app:layout_constraintHorizontal_bias="0.021" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent"/>
-
-    <TextView
-            android:id="@+id/header2TextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/header1TextView"
-            android:text="@string/sds"
-            android:textColor="@color/colorAccent"
-            android:textSize="15sp"
-            android:layout_marginTop="48dp" app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/sdsImageView" android:layout_marginStart="8dp"
-            app:layout_constraintHorizontal_bias="0.037"/>
-
-
-    <TextView
-            android:id="@+id/notification_textView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/notify_Schedule_Text"
-            android:textAlignment="center"
-            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-            android:textColor="@android:color/black"
-            android:textStyle="bold"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/header2TextView" app:layout_constraintVertical_bias="0.069"/>
+		    android:id="@+id/notification_textView"
+		    android:layout_width="match_parent"
+		    android:layout_height="wrap_content"
+		    android:text="@string/notify_Schedule_Text"
+		    android:textAlignment="center"
+		    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+		    android:textColor="@android:color/black"
+		    android:textStyle="bold"
+		    app:layout_constraintLeft_toLeftOf="parent"
+		    app:layout_constraintRight_toRightOf="parent"
+		    android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
+		    app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"
+		    app:layout_constraintTop_toBottomOf="@+id/alert-title-desc" app:layout_constraintVertical_bias="0.069"/>
 
     <TimePicker
             android:id="@+id/timePickerStart"
