--- a/app/src/main/res/layout/fragment_final_ans.xml
+++ b/app/src/main/res/layout/fragment_final_ans.xml
@@ -5,48 +5,47 @@
                                                    android:layout_width="match_parent"
                                                    android:layout_height="match_parent"
                                                    tools:context=".view.quiz.fragments.FinalAnsFragment"
-                                                   android:id="@+id/frameLayout3">
+                                                   android:id="@+id/fragment-final">
 
 
-    <ImageView
-            android:id="@+id/sdsImageView"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_centerInParent="true"
-            android:contentDescription="@null"
-            android:src="@drawable/sds" android:layout_marginStart="8dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent"/>
+	<ImageView
+			android:id="@+id/frag-sds-mini-logo"
+			android:layout_width="60dp"
+			android:layout_height="60dp"
+			android:layout_centerInParent="true"
+			android:contentDescription="@null"
+			android:src="@drawable/sds"
+			app:layout_constraintTop_toTopOf="parent"
+			android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="parent"
+			android:layout_marginStart="8dp"/>
+
+	<TextView
+			android:id="@+id/frag-title"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:text="@string/sds_title_short"
+			android:textColor="@color/dark_color"
+			android:textSize="25sp"
+			android:textStyle="bold"
+			app:layout_constraintTop_toTopOf="@+id/frag-sds-mini-logo"
+			app:layout_constraintStart_toEndOf="@+id/frag-sds-mini-logo"
+			android:layout_marginStart="8dp"/>
+
+	<TextView
+			android:id="@+id/frag-title-desc"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_below="@+id/frag-title"
+			android:text="@string/sds_title_long"
+			android:textColor="@color/dark_color"
+			android:textSize="15sp"
+			app:layout_constraintTop_toBottomOf="@+id/frag-title"
+			app:layout_constraintBottom_toBottomOf="@+id/frag-sds-mini-logo"
+			app:layout_constraintStart_toEndOf="@+id/frag-sds-mini-logo" android:layout_marginStart="8dp"/>
+
 
     <TextView
-            android:id="@+id/header1TextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/sdss"
-            android:textColor="@color/colorBackground"
-            android:textSize="25sp"
-            android:textStyle="bold" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/sdsImageView" android:layout_marginStart="8dp"
-            app:layout_constraintHorizontal_bias="0.021" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent"/>
-
-    <TextView
-            android:id="@+id/header2TextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/header1TextView"
-            android:text="@string/sds"
-            android:textColor="@color/colorAccent"
-            android:textSize="15sp"
-            android:layout_marginTop="48dp" app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/sdsImageView" android:layout_marginStart="8dp"
-            app:layout_constraintHorizontal_bias="0.037"/>
-
-
-    <TextView
-            android:id="@+id/question"
+            android:id="@+id/frag-question"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/final_message"
@@ -58,6 +57,6 @@
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_bias="1.0" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/header2TextView"/>
+            app:layout_constraintTop_toBottomOf="@+id/frag-title-desc"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
