--- a/app/src/main/res/layout/fragment_time_ans.xml
+++ b/app/src/main/res/layout/fragment_time_ans.xml
@@ -44,31 +44,34 @@
 			app:layout_constraintStart_toEndOf="@+id/frag-sds-mini-logo" android:layout_marginStart="8dp"/>
 
 
-    <TextView
-		    android:id="@+id/frag-question"
-		    android:layout_width="match_parent"
-		    android:layout_height="wrap_content"
-		    android:text="@string/question"
-		    android:textAlignment="center"
-		    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-		    android:textColor="@android:color/black"
-		    android:textStyle="bold"
-		    app:layout_constraintLeft_toLeftOf="parent"
-		    app:layout_constraintRight_toRightOf="parent"
-		    android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
-		    app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"
-		    app:layout_constraintTop_toBottomOf="@+id/menu-title-desc" app:layout_constraintVertical_bias="0.069"/>
+	<TextView
+			android:id="@+id/frag-question"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:layout_marginBottom="8dp"
+			android:text="@string/question"
+			android:textAlignment="center"
+			android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+			android:textColor="@android:color/black"
+			android:textStyle="bold"
+			app:layout_constraintBottom_toBottomOf="parent"
+			app:layout_constraintHorizontal_bias="0.0"
+			app:layout_constraintLeft_toLeftOf="parent"
+			app:layout_constraintRight_toRightOf="parent"
+			app:layout_constraintTop_toBottomOf="@+id/frag-title-desc"
+			app:layout_constraintVertical_bias="0.069" />
 
-    <TimePicker
-		    android:id="@+id/timePickerStart"
-		    android:layout_width="224dp"
-		    android:layout_height="307dp"
-		    app:layout_constraintEnd_toEndOf="parent"
-		    app:layout_constraintStart_toStartOf="parent"
-		    app:layout_constraintBottom_toBottomOf="parent"
-		    android:timePickerMode="spinner"
-		    android:layout_marginStart="8dp" android:layout_marginTop="8dp"
-		    app:layout_constraintTop_toBottomOf="@+id/frag-question" app:layout_constraintHorizontal_bias="0.474"
-		    app:layout_constraintVertical_bias="0.032"/>
+	<TimePicker
+			android:id="@+id/timePickerStart"
+			android:layout_width="224dp"
+			android:layout_height="307dp"
+			android:layout_marginStart="8dp"
+			android:timePickerMode="spinner"
+			app:layout_constraintBottom_toBottomOf="parent"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintHorizontal_bias="0.474"
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintTop_toBottomOf="@+id/frag-question"
+			app:layout_constraintVertical_bias="0.317" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
